build: update build file tasks to latest gradle syntax recommendations.